# elite-dangerous-classes-library

./: .gitignore  LICENSE.md  README.md  classes.py  enums.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
edclasses/: __init__.py  classes.py
src/edclasses/: __init__.py  api_clients.py  classes.py  enums.py  models.py  utils.py
src/edclasses/api_adapters/: elite_bgs_adapter.py  utils.py
src/edclasses/api_clients/: elite_bgs.py  elite_bgs_client.py
src/edclasses/commons/: caching_utils.py
src/edclasses/factories/: classes_factories.py
src/edclasses/tests/: mocked_adapter.py  test_classes.py  test_relations.py
src/edclasses/tests/factories/: classes_factories.py
tests/: test_classes.py
tests/factories/: classes_factories.py
