[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elite-dangerous-classes-library"
version = "0.0.3"
description = "Library representing various objects in Elite Dangerous"
readme = "README.md"
authors = [{ name = "Michał Karaś", email = "mjkaras93@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["elite dangerous"]
dependencies = [
    "ratelimit >= 2.2.1",
    "requests >= 2.27.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest >= 6.2.5",
    "pytest-factoryboy >= 2.1.0",]

[project.urls]
Homepage = "https://github.com/MKaras93/elite-dangerous-classes-library"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["edclasses.tests*"]
